# spr-multicommit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  demo.tape
src/: absorb_output.rs  adopt_prefix_output.rs  branch_names.rs  cli.rs  config.rs  execution.rs  format.rs  git.rs  github.rs  group_markers.rs  json_command.rs  json_output.rs  limit.rs  local_pr_branches.rs  machine_output.rs  main.rs  maintenance_output.rs  parsing.rs  pr_base_chain.rs  pr_labels.rs  read_only_output.rs  restack_output.rs  selectors.rs  stack_metadata.rs  summary_output.rs  test_support.rs  update_output.rs  validation.rs  validation_output.rs
src/commands/: absorb.rs  adopt_prefix.rs  cleanup.rs  common.rs  drop_merged_prefix.rs  fix_pr.rs  fix_stack.rs  land.rs  list.rs  merge.rs  mod.rs  move.rs  owning_stack.rs  prep.rs  relink_prs.rs  relink_stack.rs  resolve_stack.rs  restack.rs  rewrite_resume.rs  update.rs
tests/: global_json.rs
